fixed the dark mode features

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 
 
 
-.calculator{
+#calculator{
     background-color:#1B1919;
     width: fit-content;
     height: fit-content;
@@ -27,6 +27,7 @@ body{
 
 #toggle{
     border-radius: 25px;
+    margin: 2px;
 }
 
 #toggle:hover{
@@ -50,6 +51,7 @@ body{
     background-color: #1B1919;
     color: antiquewhite;
     height: 80px;
+    border-radius: 7px 7px 0px 0px;
 }
 
 
@@ -68,7 +70,7 @@ body{
     color: white;
     margin-bottom: 10px;
     border-style: none;
-    border-radius: 7px;
+    border-radius: 0px 0px 7px 7px;
 }
 
 
